# Newsroom-Zero

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  vercel.json  vitest.config.ts
.hermes/plans/: 2026-07-11_134043-ai-newsroom-studio-execution.md  2026-07-11_134043-newsroom-zero-execution.md
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx  waitlist-form.tsx
apps/web/app/api/waitlist/: route.ts
apps/web/app/episodes/latest/: page.tsx
apps/web/lib/: brand-contract.test.ts  episode.test.ts  episode.ts  repository.test.ts  repository.ts
apps/web/public/episodes/: latest.json
config/: feeds.json
services/pocket-tts-service/: README.md  pyproject.toml
services/pocket-tts-service/src/pocket_service/: __init__.py  app.py
services/pocket-tts-service/tests/: test_app.py
